--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Andrius Aucinas <aaucinas@brave.com>"]
 edition = "2018"
 
 [dependencies]
-speedreader = { git = "ssh://git@github.com/brave-experiments/SpeedReader.git" }
+speedreader = { git = "https://github.com/brave-experiments/SpeedReader.git" }
 
 libc = "0.2"
 
